--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,15 @@ allprojects {
 }
 
 buildscript {
+    ext {
+        kotlin_version = "1.5.21"
+    }
     repositories {
         mavenCentral()
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
