--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ allprojects {
 buildscript {
     ext {
         kotlin_version = "1.5.21"
+        coroutines_version = "1.5.1"
     }
     repositories {
         mavenCentral()
