--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.davemorrissey.labs.subscaleview.test"
-    android:hardwareAccelerated="true">
+    package="com.davemorrissey.labs.subscaleview.test">
 
     <uses-permission
         android:name="android.permission.READ_PHONE_STATE"
@@ -19,22 +18,39 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app.name"
         android:theme="@style/sampleTheme"
+        android:hardwareAccelerated="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app.name">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".basicfeatures.BasicFeaturesActivity" />
-        <activity android:name=".imagedisplay.ImageDisplayActivity" />
-        <activity android:name=".eventhandling.EventHandlingActivity" />
-        <activity android:name=".eventhandlingadvanced.AdvancedEventHandlingActivity" />
-        <activity android:name=".viewpager.ViewPagerActivity" />
-        <activity android:name=".animation.AnimationActivity" />
-        <activity android:name=".extension.ExtensionActivity" />
-        <activity android:name=".configuration.ConfigurationActivity" />
+        <activity
+            android:name=".basicfeatures.BasicFeaturesActivity"
+            android:exported="true" />
+        <activity
+            android:name=".imagedisplay.ImageDisplayActivity"
+            android:exported="true" />
+        <activity
+            android:name=".eventhandling.EventHandlingActivity"
+            android:exported="true" />
+        <activity
+            android:name=".eventhandlingadvanced.AdvancedEventHandlingActivity"
+            android:exported="true" />
+        <activity
+            android:name=".viewpager.ViewPagerActivity"
+            android:exported="true" />
+        <activity
+            android:name=".animation.AnimationActivity"
+            android:exported="true" />
+        <activity
+            android:name=".extension.ExtensionActivity"
+            android:exported="true" />
+        <activity
+            android:name=".configuration.ConfigurationActivity"
+            android:exported="true" />
     </application>
 </manifest>
