--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
     compileSdkVersion 33
@@ -28,5 +29,6 @@ android {
 
 dependencies {
     implementation project(':library')
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0-alpha01'
+    implementation 'androidx.viewpager:viewpager:1.1.0-alpha01'
 }
